--- a/src/config.properties
+++ b/src/config.properties
@@ -1,3 +1,2 @@
-#URL=http://192.168.1.108:8080/IndoorNavigationServer/
-URL=http://192.168.31.161:8080/IndoorNavigationServer/
-NAMESPACE=http://iservice.nav.com/
+URL=http://192.168.31.161:8080/IndoorPositioningServer/
+NAMESPACE=http://iservice.pos.com/
