--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,16 @@
 
 <!--添加以下节点声明网络使用-->
 <uses-permission android:name="android.permission.INTERNET" />
+<!--百度Map START-->
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
+<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+<uses-permission android:name="android.permission.GET_TASKS" />
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+<!--百度Map END-->
 
     <application
         android:allowBackup="true"
@@ -25,6 +35,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data  
+        android:name="com.baidu.lbsapi.API_KEY"  
+        android:value="9H6chhWsM4XZhXoK76lvrpXT" />
+        
     </application>
 
 </manifest>
