增加采集量配置
Signed-off-by: xusong <xusong@xusong>

--- a/src/config.properties
+++ b/src/config.properties
@@ -2,6 +2,7 @@ URL=http://192.168.31.161:8080/IndoorPositioningServer/
 NAMESPACE=http://iservice.pos.com/
 COLLECTTIME=5
 CLUSTERNUM=2
+RSSINUM=1
 KNUM=3
 FLOOR=1
 IFINDEX=1
